# afterglow-manager

./: CLAUDE.md  README.md  REQUIREMENTS-CI.md  REQUIREMENTS-PUBLISH.md  REQUIREMENTS.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml
afterglow-website/: index.html
afterglow-website/afterglow/css/: styles.css
afterglow-website/afterglow/js/: app.js
scripts/: bump-version.sh
src/: App.tsx  commands.ts  index.css  main.tsx  migrations.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  publish.rs  settings.rs  thumbnails.rs
src/components/: AppShell.tsx  ConfirmDialog.tsx  DateInput.tsx  GalleriesView.tsx  GalleryDetailView.tsx  GalleryHeader.tsx  GalleryInfoPane.tsx  GalleryTile.tsx  ImageInfoPane.tsx  ImageTile.tsx  PublishPreviewDialog.tsx  SettingsDialog.tsx  TagInput.tsx  TreeView.tsx  UntrackedImageGrid.tsx  UntrackedList.tsx  UpdateDialog.tsx  WelcomeScreen.tsx
src/context/: UpdateContext.tsx  WorkspaceContext.tsx
src/hooks/: useUpdateChecker.ts
src/test/: App.test.tsx  components.test.tsx  migrations.test.ts  publish.test.tsx  reducer.test.ts  setup.ts  test-utils.tsx
