[package]
name = "afterglow-manager"
version = "1.0.0"
description = "A desktop app for managing AfterGlow gallery metadata"
authors = ["you"]
edition = "2021"

[lib]
name = "afterglow_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
