[package]
name = "afterglow-manager"
version = "2.0.0"
description = "A desktop app for managing AfterGlow gallery metadata"
authors = ["you"]
edition = "2021"

[lib]
name = "afterglow_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-config = "1"
aws-sdk-s3 = "1"
aws-sdk-sts = "1"
aws-sdk-cloudfront = "1"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
md-5 = "0.10"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff"] }
webp = "0.3"
notify-debouncer-mini = "0.4"

[dev-dependencies]
tempfile = "3"
